# artemis

./: CLAUDE.md  Cargo.toml  README.md  learn-rust.md
apps/artemis/: Cargo.toml
apps/cli/: Cargo.toml
artemis-core/: README.md
artemis-core/src/: lib.rs  types.rs
artemis-core/src/collectors/: log_collector.rs  mempool_collector.rs  mevshare_collector.rs  opensea_order_collector.rs
clients/chainbound/: Cargo.toml
crates/artemis-core/src/collectors/: block_collector.rs
crates/clients/chainbound/src/: fiber.rs
examples/mev-share-arb/: Cargo.toml
strategies/opensea-sudo-arb/src/: strategy.rs
