[workspace]
members = [
    "bin/artemis",
    "bin/cli",
    "crates/artemis-core",
    "crates/generator",
    "crates/strategies/*",
    "crates/clients/*",
    "examples/*",
]
resolver = "2"

default-members = ["bin/artemis", "bin/cli"]

[workspace.dependencies]
## eth
ethers = { version = "2", features = ["ws", "rustls"] }
ethers-signers = "2.0"

## wasm
wasm-bindgen = "0.2.88"


[profile.release]
panic = 'abort'

[profile.dev]
panic = 'abort'
