[workspace]
members = [
    "apps/artemis",
    "apps/cli",
    "artemis-core",
    "generator",
    "strategies/*",
    "clients/*",
    "examples/*",
]
resolver = "2"

default-members = ["apps/artemis", "apps/cli"]

[workspace.dependencies]
## eth
ethers = { version = "2", features = ["ws", "rustls"] }
ethers-signers = "2.0"

## wasm
wasm-bindgen = "0.2.88"


[profile.release]
panic = 'abort'

[profile.dev]
panic = 'abort'
